Fix authorsAlpha